changing icon variables to be ReactNode. Removing unussed whitespaces. Fixing some other merge request comments

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,10 +8,7 @@ $DEFAULT_PADDING: 0.75rem;
         height: $ICON_SIZE;
         text-align: center;
         line-height: $ICON_SIZE;
-    };
-    & img {
-      vertical-align: text-bottom;
-    };    
+    }; 
 }
 
 .tree-item-group {
@@ -41,8 +38,6 @@ $DEFAULT_PADDING: 0.75rem;
         z-index: 999;
     }
 }
-
-
 
 .search {
     padding: 1rem 1.5rem;
